[package]
name = "actix-example"
version = "0.1.0"
authors = ["Ana Bujan <ana@eisberg-labs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix = "0.10.0"
actix_derive = "0.5.0"

[dev-dependencies]
actix-rt = "1.1.1"
